--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,36 +31,30 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
+  flutter_animate: ^4.5.2
+  flutter_bloc: ^9.1.1
   flutter_localizations:
     sdk: flutter
+  flutter_native_splash: ^2.4.6
+  font_awesome_flutter: ^10.8.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  flutter_bloc: ^9.1.1
-  modal_progress_hud_nsn: ^0.5.1
   intl: ^0.20.2
-  flutter_native_splash: ^2.4.6
-  flutter_animate: ^4.5.2
-  font_awesome_flutter: ^10.8.0
+  modal_progress_hud_nsn: ^0.5.1
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
+  build_runner: ^2.5.1
   flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
   hive_generator: ^2.0.1
-  build_runner: ^2.5.1
-  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter packages.
 flutter:
-  
+
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
