--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.8
+  device_preview: ^1.3.1
   flutter:
     sdk: flutter
   flutter_animate: ^4.5.2
@@ -36,6 +37,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_native_splash: ^2.4.6
+  flutter_screenutil: ^5.9.3
   font_awesome_flutter: ^10.8.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
