--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dev_dependencies:
     sdk: flutter
   hive_generator: ^2.0.1
   bloc_test: ^10.0.0
+  hive_test: ^1.0.1
+  mockito: ^5.4.5
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
